Add resource ratings
Add endpoints to CRUD ratings of resources for a given device ID (unique
identifier of an Android device). This is a preliminary implementation
until we can add user authentication and associate ratings with users.
