# app/models/rating_option.rb
@@ -1,0 +1,2 @@
+class RatingOption < ActiveRecord::Base
+end
