# app/serializers/rating_serializer.rb
@@ -1,0 +1,4 @@
+class RatingSerializer < ActiveModel::Serializer
+  attributes :id, :device_id, :resource_id
+  has_one :rating_option
+end
